fix: error message bottom clipping

--- a/css/report-bugs.css
+++ b/css/report-bugs.css
@@ -76,7 +76,7 @@
 }
 
 .error-message.visible {
-  max-height: 32px;
+  max-height: 36px;
 }
 
 .optional::after {
